syntax = "proto3";

option go_package = "payments/;payments";

package payments;

message Payment {
  string correlation_id = 1;
  string amount = 2;
  string requested_at = 3;
}

message PaymentResult {
  string correlation_id = 1;
  bool successful = 2;
  string error = 3;
}
