syntax = "proto3";

option go_package = "servers/;servers";

package servers;

message ServerScore {
  string server = 1;
  int32 score = 2;
}

message ServerRanking { repeated ServerScore servers = 1; }
